--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -60,7 +60,7 @@ jobs:
           file: ${{ matrix.dockerfile }}
           push: true
           no-cache: true
-          tags: ${{ secrets.DOCKER_REGISTRY }}/${{ github.repository }}-${{ steps.dockerfile-data.outputs.image-name }}:latest
+          tags: ${{ secrets.DOCKER_REGISTRY }}/${{ github.repository }}-${{ steps.dockerfile-data.outputs.image-name }}:${{ github.ref_name }}-latest
           build-args: |
             "VITE_BACKEND_URL=${{ vars.VITE_BACKEND_URL }}"
 
