--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,9 +85,9 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.REMOTE_KEY }}
           port: ${{ secrets.REMOTE_PORT }}
-          # strip_components: 2
+          strip_components: 3
           source: "source/deploy/remote/compose.yaml"
-          target: "${{ secrets.REMOTE_PATH }}/${{ github.ref_name }}/${{ github.repository }}/compose.yaml"
+          target: "${{ secrets.REMOTE_PATH }}/${{ github.ref_name }}/${{ github.event.repository.name }}/compose.yaml"
 
       - name: Pull and start the Docker container
         uses: appleboy/ssh-action@v1.0.3
@@ -97,5 +97,5 @@ jobs:
           key: ${{ secrets.REMOTE_KEY }}
           port: ${{ secrets.REMOTE_PORT }}
           script: |
-            cd ${{ secrets.REMOTE_PATH }}/${{ github.ref_name }}/${{ github.repository }}
+            cd ${{ secrets.REMOTE_PATH }}/${{ github.ref_name }}/${{ github.event.repository.name }}
             docker compose pull
