--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "globals": "^15.9.0",
     "dayjs": "^1.11.11",
     "humps": "^2.0.1",
     "marked": "^12.0.2",
@@ -35,10 +36,9 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint": "^9.8.0",
+    "eslint-plugin-compat": "^6.0.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
-    "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "^9.26.0",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.6.0"
